TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "138888069722464" [label="Start"];
  "138888069722464" -> "138888069725536";
  "138888069725536" [label="Code"];
  "138888069725536" -> "138888069724192";
  "138888069724192" [label="Function"];
  "138888069724192" -> "138888069723904";
  "138888069724192" -> "138888069723136";
  "138888069724192" -> "138888069722944";
  "138888069723904" [label="main IDENTIFIER"];
  "138888069723136" [label="Parameters"];
  "138888069722944" [label="Code"];
  "138888069722944" -> "138888069723184";
  "138888069722944" -> "138888069828176";
  "138888069722944" -> "138888069828800";
  "138888069723184" [label="Code"];
  "138888069723184" -> "138888069825824";
  "138888069825824" [label="Declaration"];
  "138888069825824" -> "138888069825488";
  "138888069825824" -> "138888069827264";
  "138888069825488" [label="x IDENTIFIER"];
  "138888069827264" [label="1 INT"];
  "138888069828176" [label="Code"];
  "138888069828176" -> "138888069825008";
  "138888069825008" [label="Declaration"];
  "138888069825008" -> "138888069827792";
  "138888069825008" -> "138888069825680";
  "138888069827792" [label="x IDENTIFIER"];
  "138888069825680" [label="2 INT"];
  "138888069828800" [label="Return"];
  "138888069828800" -> "138888069830240";
  "138888069830240" [label="0 INT"];
}
